--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: false"
       embedded
-      renderer="colorManagement: true, physicallyCorrectLights: true">
+      rrenderer="colorManagement: true, physicallyCorrectLights: true, alpha: true">
       
       <a-assets>
         <!-- Thay video.mp4 bằng link/đường dẫn video của bạn (nên H.264 MP4) -->
