--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="vi">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -10,31 +11,31 @@
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <script defer src="./script.js"></script>
 </head>
+
 <body>
   <div id="ui">
     <div class="tip">Đưa camera tới hình/QR mục tiêu để phát video</div>
     <button id="unmuteBtn">Bật tiếng</button>
   </div>
 
-  <a-scene
-      mindar-image="imageTargetSrc: ./targets.mind;"
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: false"
-      embedded
-      rrenderer="colorManagement: true, physicallyCorrectLights: true, alpha: true">
-      
-      <a-assets>
-        <!-- Thay video.mp4 bằng link/đường dẫn video của bạn (nên H.264 MP4) -->
-        <video id="ar-video" src="./video.mp4" preload="auto" webkit-playsinline playsinline crossorigin="anonymous"></video>
-      </a-assets>
+  <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: false" embedded
+    renderer="alpha: true; colorManagement: true; physicallyCorrectLights: true">
 
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-assets>
+      <!-- Thay video.mp4 bằng link/đường dẫn video của bạn (nên H.264 MP4) -->
+      <video id="ar-video" src="./video.mp4" preload="auto" webkit-playsinline playsinline
+        crossorigin="anonymous"></video>
+    </a-assets>
 
-      <!-- targetIndex: 0 ứng với ảnh đầu tiên trong targets.mind -->
-      <a-entity mindar-image-target="targetIndex: 0">
-        <!-- Tỉ lệ 16:9: width=1 -> height ~0.5625. Điều chỉnh kích thước theo ảnh mục tiêu của bạn -->
-        <a-video id="video-plane" src="#ar-video" width="1" height="0.5625" position="0 0 0"></a-video>
-      </a-entity>
+    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+    <!-- targetIndex: 0 ứng với ảnh đầu tiên trong targets.mind -->
+    <a-entity mindar-image-target="targetIndex: 0">
+      <!-- Tỉ lệ 16:9: width=1 -> height ~0.5625. Điều chỉnh kích thước theo ảnh mục tiêu của bạn -->
+      <a-video id="video-plane" src="#ar-video" width="1" height="0.5625" position="0 0 0"></a-video>
+    </a-entity>
   </a-scene>
 </body>
+
 </html>
