--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="vi">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -13,197 +12,33 @@
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
 
   <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: transparent !important;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    html, body { margin:0; padding:0; height:100%; background:transparent!important;
+      font-family: system-ui,-apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+    a-scene, canvas { background:transparent!important; }
+    video#mindar-video{
+      position:fixed!important; inset:0!important; width:100vw!important; height:100vh!important;
+      object-fit:cover!important; z-index:-1!important; filter:saturate(1.05) contrast(1.05);
     }
 
-    a-scene,
-    canvas {
-      background: transparent !important;
-    }
+    :root{ --red:#C8102E; --bright-red:#e11d2f; --gold:#FFD700; --glass:rgba(0,0,0,.35); }
+    .banner{ position:fixed; left:12px; right:12px; top:12px; z-index:10; display:flex; align-items:center; gap:10px;
+      background:linear-gradient(135deg,var(--red),var(--bright-red)); color:#fff; padding:10px 14px; border-radius:16px;
+      box-shadow:0 12px 30px rgba(200,16,46,.35), inset 0 0 0 2px rgba(255,255,255,.12); backdrop-filter:blur(8px);}
+    .banner .star{ width:28px; height:28px; background:var(--gold);
+      clip-path:polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%);
+      filter:drop-shadow(0 2px 4px rgba(0,0,0,.25));}
+    .banner .title{ font-weight:900; letter-spacing:.2px; font-size:16px; text-shadow:0 1px 0 rgba(0,0,0,.25);}
+    .banner .sub{ margin-left:auto; font-weight:700; background:rgba(255,255,255,.15); padding:6px 10px; border-radius:999px; border:1px solid rgba(255,255,255,.2);}
 
-    video#mindar-video {
-      position: fixed !important;
-      inset: 0 !important;
-      width: 100vw !important;
-      height: 100vh !important;
-      object-fit: cover !important;
-      z-index: -1 !important;
-      filter: saturate(1.05) contrast(1.05);
-    }
+    .tip{ position:fixed; left:50%; transform:translateX(-50%); top:64px; z-index:10; color:#fff; font-weight:700;
+      background:var(--glass); padding:8px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.2); text-shadow:0 1px 0 rgba(0,0,0,.35); }
 
-    :root {
-      --red: #C8102E;
-      --bright-red: #e11d2f;
-      --gold: #FFD700;
-      --cream: #fff7d6;
-      --glass: rgba(0, 0, 0, .35);
-    }
-
-    .banner {
-      position: fixed;
-      left: 12px;
-      right: 12px;
-      top: 12px;
-      z-index: 10;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      background: linear-gradient(135deg, var(--red), var(--bright-red));
-      color: #fff;
-      padding: 10px 14px;
-      border-radius: 16px;
-      box-shadow: 0 12px 30px rgba(200, 16, 46, .35), inset 0 0 0 2px rgba(255, 255, 255, .12);
-      backdrop-filter: blur(8px);
-    }
-
-    .banner .star {
-      width: 28px;
-      height: 28px;
-      background: var(--gold);
-      clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, .25));
-    }
-
-    .banner .title {
-      font-weight: 900;
-      letter-spacing: .2px;
-      font-size: 16px;
-      text-shadow: 0 1px 0 rgba(0, 0, 0, .25);
-    }
-
-    .banner .sub {
-      margin-left: auto;
-      font-weight: 700;
-      background: rgba(255, 255, 255, .15);
-      padding: 6px 10px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, .2);
-    }
-
-    #ui {
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 14px;
-      z-index: 10;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      padding: 0 12px;
-    }
-
-    .btn {
-      appearance: none;
-      border: 0;
-      cursor: pointer;
-      padding: 10px 14px;
-      border-radius: 999px;
-      font-weight: 800;
-      box-shadow: 0 10px 24px rgba(0, 0, 0, .25), inset 0 0 0 2px rgba(255, 255, 255, .22);
-      transition: .2s transform ease, .2s filter ease;
-      backdrop-filter: blur(8px);
-    }
-
-    .btn:active {
-      transform: translateY(2px) scale(.98);
-    }
-
-    .btn-gold {
-      background: linear-gradient(135deg, var(--gold), #f6c105);
-      color: #7a5200;
-    }
-
-    .btn-red {
-      background: linear-gradient(135deg, var(--bright-red), #b4061a);
-      color: #fff;
-    }
-
-    .tip {
-      position: fixed;
-      left: 50%;
-      transform: translateX(-50%);
-      top: 64px;
-      z-index: 10;
-      color: #fff;
-      font-weight: 700;
-      background: var(--glass);
-      padding: 8px 12px;
-      border-radius: 12px;
-      border: 1px solid rgba(255, 255, 255, .2);
-      text-shadow: 0 1px 0 rgba(0, 0, 0, .35);
-    }
-
-    .wm-star {
-      position: fixed;
-      right: 8px;
-      bottom: 88px;
-      width: 64px;
-      height: 64px;
-      opacity: .18;
-      z-index: 1;
-      background: var(--gold);
-      clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-      filter: blur(.4px);
-      animation: float 6s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0% {
-        transform: translateY(0);
-      }
-
-      50% {
-        transform: translateY(-6px);
-      }
-
-      100% {
-        transform: translateY(0);
-      }
-    }
-
-    /* Pháo hoa — tăng z-index lên trên canvas nhưng dưới UI (z=10) */
-    .fw {
-      pointer-events: none;
-      position: fixed;
-      inset: 0;
-      z-index: 9;
-      overflow: hidden;
-    }
-
-    .fw i {
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      background: var(--gold);
-      border-radius: 50%;
-      box-shadow: 0 0 10px var(--gold);
-      animation: pop 1200ms ease-out forwards;
-    }
-
-    @keyframes pop {
-      0% {
-        transform: translate(0, 0) scale(0);
-        opacity: 0;
-      }
-
-      10% {
-        opacity: 1;
-      }
-
-      100% {
-        transform: translate(var(--x), var(--y)) scale(0.1);
-        opacity: 0;
-      }
-    }
+    #ui{ position:fixed; left:0; right:0; bottom:14px; z-index:10; display:flex; justify-content:center; gap:10px; padding:0 12px; }
+    .btn{ appearance:none; border:0; cursor:pointer; padding:10px 14px; border-radius:999px; font-weight:800;
+      box-shadow:0 10px 24px rgba(0,0,0,.25), inset 0 0 0 2px rgba(255,255,255,.22); backdrop-filter:blur(8px);
+      background:linear-gradient(135deg,var(--gold),#f6c105); color:#7a5200; }
   </style>
 </head>
-
 <body>
 
   <div class="banner">
@@ -212,17 +47,17 @@
     <div class="sub">A80 Fest</div>
   </div>
 
-  <div class="tip">Đưa camera tới ảnh/QR code.</div>
-
-  <div class="wm-star"></div>
-  <div class="fw" id="fw"></div>
+  <div class="tip" id="tip">Nhấn nút để chuyển đổi chế độ AR/QR</div>
 
   <div id="ui">
-
+    <button class="btn" id="modeBtn">🔁 Chế độ: AR</button>
   </div>
 
-  <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: false" embedded
+  <a-scene
+    mindar-image="imageTargetSrc: ./targets.mind;"
+    vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: false"
+    embedded
     renderer="alpha: true; colorManagement: true; physicallyCorrectLights: true">
 
     <a-assets>
@@ -246,195 +81,121 @@
   </a-scene>
 
   <script>
-    /* ===== NÚT & ÂM THANH ===== */
+    /* ===== cấu hình chung ===== */
     const vids = Array.from(document.querySelectorAll('video'));
-    vids.forEach(v => {
-      v.setAttribute('playsinline', '');
-      v.setAttribute('webkit-playsinline', '');
+    vids.forEach(v => { v.muted = true; v.setAttribute('playsinline',''); v.setAttribute('webkit-playsinline',''); });
+
+    // Chế độ: 'AR' hoặc 'QR'
+    window.MODE = 'AR';
+    const modeBtn = document.getElementById('modeBtn');
+    const tipEl   = document.getElementById('tip');
+    modeBtn.addEventListener('click', () => {
+      window.MODE = (window.MODE === 'AR') ? 'QR' : 'AR';
+      modeBtn.textContent = (window.MODE === 'AR') ? '🔁 Chế độ: AR' : '🔁 Chế độ: QR';
+      tipEl.textContent   = (window.MODE === 'AR')
+        ? 'Nhấn nút để quét QR'
+        : 'Nhấn nút để về chế độ AR';
+      // khi vào QR mode: dừng hết video
+      if (window.MODE === 'QR') vids.forEach(v => { try{v.pause();}catch{} });
     });
-    /* ===== THEO DÕI MARKER ===== */
-    // let activeTargets = 0;
-    // function wireTarget(targetSelector, videoSelector) {
-    //   const target = document.querySelector(targetSelector);
-    //   const video = document.querySelector(videoSelector);
-    //   if (!target || !video) return;
 
-    //   target.addEventListener('targetFound', () => {
-    //     activeTargets++;
-    //     try { if (video.currentTime < 0.01) video.currentTime = 0; } catch { }
-    //     video.play().catch(() => { });
-    //   });
-    //   target.addEventListener('targetLost', () => {
-    //     activeTargets = Math.max(0, activeTargets - 1);
-    //     if (!video.paused) video.pause();
-    //   });
-    // }
-    // // ✅ thêm dấu # cho selector
-    // wireTarget('#t0', '#v0');
-    // wireTarget('#t1', '#v1');
-    // wireTarget('#t2', '#v2');
-
-    window.activeTargets = 0;  // DÙNG CHUNG TOÀN TRANG
-
+    /* ===== theo dõi marker ===== */
+    window.activeTargets = 0;
     function wireTarget(targetSelector, videoSelector) {
       const target = document.querySelector(targetSelector);
-      const video = document.querySelector(videoSelector);
+      const video  = document.querySelector(videoSelector);
       if (!target || !video) return;
 
       target.addEventListener('targetFound', () => {
-        window.activeTargets++;                    // << dùng window.activeTargets
-        try { if (video.currentTime < 0.01) video.currentTime = 0; } catch { }
-        video.play().catch(() => { });
+        window.activeTargets++;
+        if (window.MODE === 'AR') {        // chỉ phát khi ở AR mode
+          try { if (video.currentTime < 0.01) video.currentTime = 0; } catch {}
+          video.play().catch(()=>{});
+        }
       });
-
       target.addEventListener('targetLost', () => {
-        window.activeTargets = Math.max(0, window.activeTargets - 1);  // <<
+        window.activeTargets = Math.max(0, window.activeTargets - 1);
         if (!video.paused) video.pause();
       });
     }
-
     wireTarget('#t0', '#v0');
     wireTarget('#t1', '#v1');
     wireTarget('#t2', '#v2');
 
-    /* ===== QUÉT QR (dùng camera MindAR) ===== */
+    /* ===== quét QR (dùng camera MindAR) ===== */
     (async () => {
-      const DEBUG = false; // đổi thành true nếu muốn log ra console
-
-      // 1) Tìm và CHỜ video nền của MindAR thật sự sẵn sàng
       function findMindARVideo() {
         return document.querySelector('video#mindar-video')
-          || document.querySelector('video#mindar-image-video')
-          || document.querySelector('video[id^="mindar"]')
-          || document.querySelector('video');
+            || document.querySelector('video#mindar-image-video')
+            || document.querySelector('video[id^="mindar"]')
+            || document.querySelector('video');
       }
-      const waitMindARVideo = () => new Promise(resolve => {
-        const tick = () => { const v = findMindARVideo(); v ? resolve(v) : requestAnimationFrame(tick); };
-        tick();
+      const waitMindARVideo = () => new Promise(res => {
+        const tick=()=>{ const v=findMindARVideo(); v?res(v):requestAnimationFrame(tick); }; tick();
       });
       const camVideo = await waitMindARVideo();
+      camVideo.setAttribute('playsinline',''); camVideo.setAttribute('webkit-playsinline','');
+      try { await camVideo.play(); } catch {}
 
-      // Bắt camVideo chạy (Safari iOS cần gọi play() trước khi vẽ canvas)
-      camVideo.setAttribute('playsinline', '');
-      camVideo.setAttribute('webkit-playsinline', '');
-      try { await camVideo.play(); } catch (_) { }
-
-      // Chờ có kích thước (videoWidth/videoHeight > 0)
-      const waitReady = () => new Promise(res => {
-        const chk = () => {
-          if ((camVideo.videoWidth | 0) > 0 && (camVideo.videoHeight | 0) > 0 && camVideo.readyState >= 2) res();
-          else setTimeout(chk, 80);
-        };
+      const ready = () => new Promise(r=>{
+        const chk=()=>{ if (camVideo.videoWidth>0 && camVideo.videoHeight>0 && camVideo.readyState>=2) r(); else setTimeout(chk,80); };
         chk();
       });
-      await waitReady();
+      await ready();
 
-      // 2) Chuẩn bị canvas đọc khung hình
       const canvas = document.createElement('canvas');
-      const ctx = canvas.getContext('2d', { willReadFrequently: true });
+      const ctx = canvas.getContext('2d', { willReadFrequently:true });
 
-      // 3) Chọn engine: BarcodeDetector (nếu có) -> jsQR (fallback)
-      let useBarcodeDetector = 'BarcodeDetector' in window;
+      let useBD = 'BarcodeDetector' in window;
       let detector = null;
-      if (useBarcodeDetector) {
-        try { detector = new BarcodeDetector({ formats: ['qr_code'] }); }
-        catch { useBarcodeDetector = false; }
-      }
+      if (useBD) { try{ detector = new BarcodeDetector({formats:['qr_code']}); } catch { useBD=false; } }
 
-      // Toast thông báo chế độ
+      let lastContent='', coolDown=false, prompting=false;
       const toast = document.createElement('div');
-      toast.textContent = useBarcodeDetector ? 'QR: dùng BarcodeDetector' : 'QR: dùng chế độ tương thích (jsQR)';
-      Object.assign(toast.style, {
-        position: 'fixed', bottom: '86px', left: '12px',
-        background: 'rgba(0,0,0,.5)', color: '#fff',
-        padding: '6px 10px', borderRadius: '10px', fontSize: '12px', zIndex: 20
-      });
-      document.body.appendChild(toast);
-      setTimeout(() => toast.remove(), 2500);
+      toast.textContent = useBD ? 'QR: dùng BarcodeDetector' : 'QR: dùng chế độ tương thích (jsQR)';
+      Object.assign(toast.style,{position:'fixed',bottom:'86px',left:'12px',background:'rgba(0,0,0,.5)',color:'#fff',padding:'6px 10px',borderRadius:'10px',fontSize:'12px',zIndex:20});
+      document.body.appendChild(toast); setTimeout(()=>toast.remove(),2500);
 
-      let lastContent = '';
-      let coolDown = false;
-      let prompting = false;
-
-      function isValidURL(text) {
-        try { const u = new URL(text); return u.protocol === 'http:' || u.protocol === 'https:'; }
-        catch { return false; }
-      }
-      function maybeOpen(url) {
+      function isValidURL(t){ try{ const u=new URL(t); return u.protocol==='http:'||u.protocol==='https:'; }catch{ return false; } }
+      function maybeOpen(url){
         if (!url || prompting) return;
         prompting = true;
         const ok = window.confirm('Phát hiện QR:\n' + url + '\n\nBạn có muốn mở ở tab mới không?');
-        if (ok) window.open(url, '_blank', 'noopener');
-        lastContent = url;
-        coolDown = true; setTimeout(() => coolDown = false, 1500);
-        prompting = false;
+        if (ok) window.open(url,'_blank','noopener');
+        lastContent=url; coolDown=true; setTimeout(()=>coolDown=false,1500); prompting=false;
       }
 
-      // Đảm bảo biến activeTargets tồn tại & đúng
-      window.activeTargets = window.activeTargets || 0;
-
-      // 4) Vòng lặp quét
-      async function loop() {
-        try {
-          // Ưu tiên AR: nếu đang thấy marker -> bỏ qua quét QR
-          if (window.activeTargets === 0 && !coolDown && !prompting) {
+      async function loop(){
+        try{
+          // Chỉ quét khi đang ở chế độ QR và không bám marker
+          if (window.MODE === 'QR' && window.activeTargets === 0 && !coolDown && !prompting){
             let foundUrl = null;
-
-            if (useBarcodeDetector && detector) {
+            if (useBD && detector){
               const codes = await detector.detect(camVideo);
-              if (codes && codes.length) {
-                const raw = (codes[0].rawValue || '').trim();
-                if (DEBUG) console.log('BD hit:', raw);
-                if (raw && raw !== lastContent && isValidURL(raw)) foundUrl = raw;
+              if (codes && codes.length){
+                const raw = (codes[0].rawValue||'').trim();
+                if (raw && raw!==lastContent && isValidURL(raw)) foundUrl = raw;
               }
             } else {
-              const vw = camVideo.videoWidth | 0, vh = camVideo.videoHeight | 0;
-              if (vw && vh) {
+              const vw = camVideo.videoWidth|0, vh = camVideo.videoHeight|0;
+              if (vw && vh){
                 canvas.width = vw; canvas.height = vh;
-                ctx.drawImage(camVideo, 0, 0, vw, vh);
-                const img = ctx.getImageData(0, 0, vw, vh);
-                //const qr = jsQR(img.data, vw, vh, { inversionAttempts: 'dontInvert' });
-                const qr = jsQR(img.data, vw, vh, { inversionAttempts: 'attemptBoth' });
-                if (qr && qr.data) {
+                ctx.drawImage(camVideo,0,0,vw,vh);
+                const img = ctx.getImageData(0,0,vw,vh);
+                const qr = jsQR(img.data,vw,vh,{inversionAttempts:'attemptBoth'});
+                if (qr && qr.data){
                   const raw = qr.data.trim();
-                  if (DEBUG) console.log('jsQR hit:', raw);
-                  if (raw && raw !== lastContent && isValidURL(raw)) foundUrl = raw;
+                  if (raw && raw!==lastContent && isValidURL(raw)) foundUrl = raw;
                 }
               }
             }
-
             if (foundUrl) maybeOpen(foundUrl);
           }
-        } catch (e) {
-          if (DEBUG) console.warn('QR loop error:', e);
-        }
-        // ~30fps là đủ, giảm tải CPU
-        setTimeout(() => requestAnimationFrame(loop), 34);
+        }catch(_){}
+        setTimeout(()=>requestAnimationFrame(loop), 34);
       }
       loop();
     })();
-
-    /* ===== PHÁO HOA ===== */
-    const fw = document.getElementById('fw');
-    function fireworkBurst(x, y) {
-      for (let i = 0; i < 22; i++) {
-        const p = document.createElement('i');
-        const ang = Math.random() * Math.PI * 2, r = 60 + Math.random() * 140;
-        p.style.left = x + 'px'; p.style.top = y + 'px';
-        p.style.setProperty('--x', Math.cos(ang) * r + 'px');
-        p.style.setProperty('--y', Math.sin(ang) * r + 'px');
-        fw.appendChild(p);
-        setTimeout(() => p.remove(), 1200);
-      }
-    }
-    document.getElementById('celeBtn').addEventListener('click', () => {
-      const cx = innerWidth / 2, cy = innerHeight * 0.35;
-      fireworkBurst(cx, cy);
-      setTimeout(() => fireworkBurst(cx - 90, cy + 40), 120);
-      setTimeout(() => fireworkBurst(cx + 90, cy + 20), 220);
-      if (navigator.vibrate) navigator.vibrate(80);
-    });
   </script>
 </body>
-
 </html>
